--- a/README.org
+++ b/README.org
@@ -1,21 +1,48 @@
-#+TITLE: Emacs Configuration for Windows 10
-#+DESCRIPTION: A complete, tailored Emacs setup for Windows 10 users, focusing on speed, aesthetics, packages, environment tuning, Org mode, and ChatGPT integration.
+* Installing Emacs with Native Compilation via MSYS2 (MINGW64)
 
-* Installing Emacs on Windows 10 with Chocolatey
-To install Emacs easily on Windows 10, we’ll use the Chocolatey package manager.
+This guide explains how to install a full-featured Emacs build (GUI + native compilation support) on Windows using **MSYS2** in the **MINGW64** environment.
 
-1. Open *Command Prompt* or *PowerShell* with administrator rights.  
-2. Run this to install Chocolatey:
+**Prerequisites:**
 
-@"%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.exe" -NoProfile -InputFormat None -ExecutionPolicy Bypass -Command "iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))" && SET "PATH=%PATH%;%ALLUSERSPROFILE%\chocolatey\bin"
+- Windows 10 or 11 (64-bit)
+- Administrator access (recommended for editing the system PATH)
 
-3. Install Emacs with:
+**Steps:**
 
-choco install emacs
-
-4. Confirm the installation worked:
-
+| Step | Description |
+|------|-------------|
+| 1 | Install **MSYS2** from the official site. Choose a short, ASCII-only path like `C:\msys64` to avoid path length issues. |
+| 2 | Launch the **MSYS2 MINGW64** terminal (not MSYS or UCRT64). Run: |
+#+BEGIN_SRC bash
+pacman -Syu
+#+END_SRC
+Restart the terminal if prompted and repeat until the system is fully updated. |
+| 3 | *Optional but recommended*: Install the native Windows toolchain: |
+#+BEGIN_SRC bash
+pacman -S --needed base-devel mingw-w64-x86_64-toolchain
+#+END_SRC |
+| 4 | Install Emacs and the native compilation library: |
+#+BEGIN_SRC bash
+pacman -S mingw-w64-x86_64-emacs mingw-w64-x86_64-libgccjit
+#+END_SRC
+This installs Emacs with GUI support and `libgccjit` for native compilation. |
+| 5 | Add `C:\msys64\mingw64\bin` to your Windows PATH (via *System Properties → Environment Variables* or PowerShell). |
+| 6 | Verify installation: |
+#+BEGIN_SRC powershell
 emacs --version
+#+END_SRC
+Inside Emacs, evaluate:
+#+BEGIN_SRC elisp
+(and (fboundp 'native-comp-available-p)
+     (native-comp-available-p))
+#+END_SRC
+A non-nil result confirms native compilation is active. |
+
+**Why this method?**
+- Installs directly from MSYS2’s MINGW64 repository — no manual building required.
+- Includes `libgccjit` for native compilation, improving Emacs performance.
+- More stable than UCRT64 builds, avoiding known issues with broken executables.
+
 
 * Setting Environment Variables
 We’ll define some environment variables so Emacs knows where your home directory is and where the server file lives.
