--- a/README.org
+++ b/README.org
@@ -11,7 +11,7 @@ This guide explains how to install a full-featured Emacs build (GUI + native com
 | Step | Description |
 |------|-------------|
 | 1 | Install *MSYS2* from the official site. Choose a short, ASCII-only path like `C:\msys64` to avoid path length issues. |
-| 2 | Launch the *MSYS2 MINGW64* terminal (not MSYS or UCRT64). Run: |
+| 2 | Launch the *MSYS2 MINGW64* terminal (not MSYS or UCRT64). Run:
 #+BEGIN_SRC bash
 pacman -Syu
 #+END_SRC
