--- a/README.org
+++ b/README.org
@@ -1,85 +1,89 @@
 * Installing Emacs with Native Compilation via MSYS2 (MINGW64)
 
-This guide explains how to install a full-featured Emacs build (GUI + native compilation support) on Windows using *MSYS2* in the *MINGW64* environment.
+This guide explains how to install a full-featured Emacs build (GUI + native compilation support) on Windows using MSYS2 in the MINGW64 environment.
 
 *Prerequisites:*
 - Windows 10 or 11 (64-bit)
 - Administrator access (recommended for editing the system PATH)
 
-*Steps:*
+*Installation Steps:*
 
-1. Download and install *MSYS2* from the official site. Use a simple path like `C:\msys64` to avoid path length issues.
-2. Open the *MSYS2 MINGW64* terminal (not MSYS or UCRT64) and update the system:
-#+BEGIN_SRC bash
-pacman -Syu
-#+END_SRC
-If prompted, restart the terminal and re-run the update until no further updates are available.
-3. (Optional but recommended) Install the native Windows toolchain:
-#+BEGIN_SRC bash
-pacman -S --needed base-devel mingw-w64-x86_64-toolchain
-#+END_SRC
-4. Install Emacs with native compilation support:
-#+BEGIN_SRC bash
-pacman -S mingw-w64-x86_64-emacs mingw-w64-x86_64-libgccjit
-#+END_SRC
-This installs a prebuilt Emacs with GUI and `libgccjit` for native compilation.
-5. Verify installation:
-#+BEGIN_SRC powershell
-emacs --version
-#+END_SRC
-Inside Emacs, check native compilation:
-#+BEGIN_SRC elisp
-(and (fboundp 'native-comp-available-p)
-     (native-comp-available-p))
-#+END_SRC
-A non-nil result means native compilation is active.
+1. Install MSYS2
+   Download and install MSYS2 from the official site, using a simple path like `C:\msys64` to avoid path length issues.
 
-*Why this method?*
-- Prebuilt Emacs with native compilation — no manual build required.
-- Includes `libgccjit` for faster performance.
+2. Update the base system
+   Open the MSYS2 MINGW64 terminal (not MSYS or UCRT64) and run:
+   #+BEGIN_SRC bash
+   pacman -Syu
+   #+END_SRC
+   Restart the terminal if prompted and repeat until no further updates are available.
+
+3. Install the Windows toolchain (optional but recommended)
+   #+BEGIN_SRC bash
+   pacman -S --needed base-devel mingw-w64-x86_64-toolchain
+   #+END_SRC
+
+4. Install Emacs with native compilation support
+   #+BEGIN_SRC bash
+   pacman -S mingw-w64-x86_64-emacs mingw-w64-x86_64-libgccjit
+   #+END_SRC
+   This installs a prebuilt Emacs with GUI and `libgccjit` for native compilation.
+
+5. Verify installation
+   #+BEGIN_SRC powershell
+   emacs --version
+   #+END_SRC
+   Inside Emacs, check native compilation:
+   #+BEGIN_SRC elisp
+   (and (fboundp 'native-comp-available-p)
+        (native-comp-available-p))
+   #+END_SRC
+   A non-nil result means native compilation is active.
+
+Why this method?
+- Provides a prebuilt Emacs with native compilation — no manual build required.
+- Includes `libgccjit` for better performance.
 - More stable than UCRT64 builds.
 
 ---
-You now have a fast, fully-featured Emacs on Windows with reliable updates via MSYS2.
 
 *Setting Environment Variables and Updating PATH*
-These steps configure Emacs to recognize your home directory, specify the server file location for `emacsclient`, and allow Emacs to be run from PowerShell or CMD.
+These steps configure Emacs to recognize your home directory, specify the server file location for `emacsclient`, and add Emacs to your PATH.
 
-**Create the server directory (if missing)**
-#+BEGIN_SRC powershell
-$serverDir = Join-Path $env:USERPROFILE ".emacs.d\server"
-New-Item -ItemType Directory -Path $serverDir -Force | Out-Null
-#+END_SRC
+1. Create the server directory (if missing)
+   #+BEGIN_SRC powershell
+   $serverDir = Join-Path $env:USERPROFILE ".emacs.d\server"
+   New-Item -ItemType Directory -Path $serverDir -Force | Out-Null
+   #+END_SRC
 
-**Set HOME (User scope)**
-#+BEGIN_SRC powershell
-[Environment]::SetEnvironmentVariable('HOME', $env:USERPROFILE, 'User')
-#+END_SRC
+2. Set HOME (User scope)
+   #+BEGIN_SRC powershell
+   [Environment]::SetEnvironmentVariable('HOME', $env:USERPROFILE, 'User')
+   #+END_SRC
 
-**Set EMACS_SERVER_FILE (User scope)**
-#+BEGIN_SRC powershell
-$serverFile = Join-Path $env:USERPROFILE ".emacs.d\server\server"
-[Environment]::SetEnvironmentVariable('EMACS_SERVER_FILE', $serverFile, 'User')
-#+END_SRC
+3. Set EMACS_SERVER_FILE (User scope)
+   #+BEGIN_SRC powershell
+   $serverFile = Join-Path $env:USERPROFILE ".emacs.d\server\server"
+   [Environment]::SetEnvironmentVariable('EMACS_SERVER_FILE', $serverFile, 'User')
+   #+END_SRC
 
-**Add MSYS2 MINGW64 bin to PATH (User scope)**
-#+BEGIN_SRC powershell
-$msysBin = "C:\\msys64\\mingw64\\bin"
-$currentPath = [Environment]::GetEnvironmentVariable('Path', 'User')
-if (-not $currentPath) { $currentPath = '' }
-if ($currentPath -notmatch [regex]::Escape($msysBin)) {
-    $newPath = if ($currentPath.Trim().Length -gt 0) {
-        $currentPath.TrimEnd(';') + ';' + $msysBin
-    } else {
-        $msysBin
-    }
-    [Environment]::SetEnvironmentVariable('Path', $newPath, 'User')
-}
-Write-Output "User PATH updated. Restart terminals to apply changes."
-#+END_SRC
+4. Add MSYS2 MINGW64 bin to PATH (User scope)
+   #+BEGIN_SRC powershell
+   $msysBin = "C:\\msys64\\mingw64\\bin"
+   $currentPath = [Environment]::GetEnvironmentVariable('Path', 'User')
+   if (-not $currentPath) { $currentPath = '' }
+   if ($currentPath -notmatch [regex]::Escape($msysBin)) {
+       $newPath = if ($currentPath.Trim().Length -gt 0) {
+           $currentPath.TrimEnd(';') + ';' + $msysBin
+       } else {
+           $msysBin
+       }
+       [Environment]::SetEnvironmentVariable('Path', $newPath, 'User')
+   }
+   Write-Output "User PATH updated. Restart terminals to apply changes."
+   #+END_SRC
 
-After running these commands, restart PowerShell or CMD so the environment variables and PATH changes take effect.
----
+After running these commands, restart PowerShell or CMD for the changes to take effect.
 
 * Configuring Emacs
 Open `init.org` in Emacs, customize as you wish, and run `org-babel-tangle` to produce `init.el`. This extracts all Emacs Lisp code blocks into `init.el`. Restart Emacs to activate the changes.
