--- a/README.org
+++ b/README.org
@@ -13,31 +13,31 @@ This guide explains how to install a full-featured Emacs build (GUI + native com
 
 2. Update the base system
    Open the MSYS2 MINGW64 terminal (not MSYS or UCRT64) and run:
-   #+BEGIN_SRC bash
-   pacman -Syu
-   #+END_SRC
+#+BEGIN_SRC bash
+pacman -Syu
+#+END_SRC
    Restart the terminal if prompted and repeat until no further updates are available.
 
 3. Install the Windows toolchain (optional but recommended)
-   #+BEGIN_SRC bash
-   pacman -S --needed base-devel mingw-w64-x86_64-toolchain
-   #+END_SRC
+#+BEGIN_SRC bash
+pacman -S --needed base-devel mingw-w64-x86_64-toolchain
+#+END_SRC
 
 4. Install Emacs with native compilation support
-   #+BEGIN_SRC bash
-   pacman -S mingw-w64-x86_64-emacs mingw-w64-x86_64-libgccjit
-   #+END_SRC
+#+BEGIN_SRC bash
+pacman -S mingw-w64-x86_64-emacs mingw-w64-x86_64-libgccjit
+#+END_SRC
    This installs a prebuilt Emacs with GUI and `libgccjit` for native compilation.
 
 5. Verify installation
-   #+BEGIN_SRC powershell
-   emacs --version
-   #+END_SRC
+#+BEGIN_SRC powershell
+emacs --version
+#+END_SRC
    Inside Emacs, check native compilation:
-   #+BEGIN_SRC elisp
-   (and (fboundp 'native-comp-available-p)
-        (native-comp-available-p))
-   #+END_SRC
+#+BEGIN_SRC elisp
+(and (fboundp 'native-comp-available-p)
+     (native-comp-available-p))
+#+END_SRC
    A non-nil result means native compilation is active.
 
 Why this method?
@@ -48,7 +48,7 @@ Why this method?
 ---
 
 *Setting Environment Variables and Updating PATH*
-These steps configure Emacs to recognize your home directory, specify the server file location for `emacsclient`, and add Emacs to your PATH.
+These steps configure Emacs to recognize your home directory, specify the server file location for `emacsclient`, and optionally add Emacs to your PATH.
 
 **Essential Variables:**
 1. `HOME` — `%USERPROFILE%` — Required.
